c'est beau les activity :D

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -25,7 +25,7 @@
 			{{#if sess.logged}}
 			<div id="container">
 
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default"> <!-- nav bar !! -->
 	<div class="container-fluid">
 
 		<!-- Brand and toggle get grouped for better mobile display -->
@@ -79,7 +79,7 @@
 		</div><!-- /.navbar-collapse -->
 
 	</div><!-- /.container-fluid -->
-</nav>
+</nav><!-- !nav bar -->
 
 <!--
 				{{#if userClass}}
