--- a/templates/views/view_activity.hbs
+++ b/templates/views/view_activity.hbs
@@ -3,7 +3,8 @@
 <div class="container">
 	<ul class="list-group">
 		<li class="list-group-item">{{result.name}}</li>
-		<li class="list-group-item">{{result.descrilition}}</li>
+		<li class="list-group-item">{{result.description}}</li>
+		<li class="list-group-item"><a href="{{result.subject}}">Link to subject</a></li>
 		<li class="list-group-item">{{result.slots.max}}</li>
 		<li class="list-group-item">{{result.slots.current}}</li>
 	</ul>
