mange ton image

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -9,6 +9,11 @@
 		<link href="/styles/site.min.css" rel="stylesheet">
 
 		<style>
+			#home
+		{
+			height: 30px;
+			width: 30px;
+		}
 		</style>
 
 		{{!-- This file provides the default styling for the KeystoneJS Content Editor
@@ -41,7 +46,7 @@
 			</button>
 			je crois que ca sert a rien mais je suis pas sur
 			-->
-			<a class="navbar-brand" href="#"><img src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a>
+			<a class="navbar-brand" href="#"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a>
 		</div>
 
 		<!-- Collect the nav links, forms, and other content for toggling -->
