--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -9,7 +9,7 @@
 		<link href="/styles/site.min.css" rel="stylesheet">
 
 		<style>
-			#home
+		#home
 		{
 			height: 30px;
 			width: 30px;
@@ -33,38 +33,28 @@
 			{{#if sess.logged}}
 			<div id="container">
 
-				<!-- HOME PROJECT ELERN FORUM SEARCH BUTTUNPROFIL NOTIF LOGOUT -->
-
 <nav class="navbar navbar-default navbar-fixed-top"> <!-- nav bar !! -->
 	<div class="container-fluid">
 
-		<!-- Brand and toggle get grouped for better mobile display -->
-		<div class="navbar-header">
-			<!--
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-				<span class="sr-only">Toggle navigation</span>
-			</button>
-			je crois que ca sert a rien mais je suis pas sur
-			-->
-			<a class="navbar-brand" href="#"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a>
-		</div>
 
-		<!-- Collect the nav links, forms, and other content for toggling -->
+
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-			<ul class="nav navbar-nav">
+			<ul class="nav nav-pills nav-justified">
+
+				<li><a href="#"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a></li>
 				<li class="active">	<a href="project">Project</a></li>
 				<li>				<a href="elearn">e-learning</a></li>
 				<li>				<a href="forum">forum</a></li>
-			</ul>
 
-			<form class="navbar-form navbar-left" role="search">
-				<div class="form-group">
-					<input type="text" class="form-control" placeholder="Search">
-				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
-			</form>
+				<li>
+					<form class="navbar-form" action="/search" method="POST" role="search">
+						<div class="form-group">
+							<input type="text" id="search" name="search" class="form-control" placeholder="Search">
+						</div>
+						<button type="submit" value="gosearch" class="btn btn-default">Submit</button>
+					</form>
+				</li>
 
-			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Profile<span class="caret"></span></a>
 					<ul class="dropdown-menu">
@@ -96,6 +86,7 @@
 
 	</div><!-- /.container-fluid -->
 </nav><!-- !nav bar -->
+
 
 <!--
 				{{#if userClass}}
