--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -42,9 +42,9 @@
 			<ul class="nav nav-pills nav-justified">
 
 				<li><a href="#"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a></li>
-				<li class="active">	<a href="project">Project</a></li>
-				<li>				<a href="elearn">e-learning</a></li>
-				<li>				<a href="forum">forum</a></li>
+				<li class="active">	<a href="#">Project</a></li>
+				<li>				<a href="#">e-learning</a></li>
+				<li>				<a href="#">forum</a></li>
 
 				<li>
 					<form class="navbar-form" action="/search" method="POST" role="search">
@@ -79,7 +79,7 @@
 					</ul>
 				</li>
 
-				<li>				<a href="elearn">Logout</a></li>
+				<li>				<a href="logout">Logout</a></li>
 
 			</ul>
 		</div><!-- /.navbar-collapse -->
