--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -24,8 +24,8 @@
 
 		<div><p>Hello {{sess.user}} !</p></div>
 		<div>
-			<form action='/search' method='POST'>
+			<!-- <form action='/search' method='POST'>
 				<label for='username'>Username:</label>
 				<input type='text' id='username' name='username'><input type='submit' value='Login'>
-			</form>
+			</form> -->
 		</div>
