les boutons home et modules fonctionne et on affiche les modules :D

--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -41,8 +41,8 @@
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav nav-pills nav-justified">
 
-				<li><a href="#"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a></li>
-				<li class="active">	<a href="#">Project</a></li>
+				<li><a href="/profile"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a></li>
+				<li class="active">	<a href="/module">Modules</a></li>
 				<li>				<a href="#">e-learning</a></li>
 				<li>				<a href="#">forum</a></li>
 
