--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -57,6 +57,10 @@ var tableau:
 		<div class="container-fluid">
 			<img src="{{!-- sess.picture --}}" alt="your profil picture" class="img-responsive img-circle"><p>{{ data.lastname }} {{ sess.firstname }}, {{ sess.user }}</br></br></br></p>
 			<p>
+				{{#each data}}
+				{{this}}<br />
+				{{/each}}
+				{{data.act_insc}}<br />{{data.act_disp}}<br />
 				your password: {{ sess.pw }}
 				</br> MICK !!!! Tu va me changer ca vite fait... le mot de pass en clair c'est po bien
 				</br>si jamais tu cherche: routes/views/login.js
