--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -79,7 +79,7 @@
 					</ul>
 				</li>
 
-				<li>				<a href="logout">Logout</a></li>
+				<li>				<a href="/logout">Logout</a></li>
 
 			</ul>
 		</div><!-- /.navbar-collapse -->
