--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -43,6 +43,7 @@
 
 				<li><a href="/profile"><img id="home" src="https://pbs.twimg.com/profile_images/456732763480010753/dks7yGqg_400x400.jpeg"></img></a></li>
 				<li class="active">	<a href="/module">Modules</a></li>
+				<li>				<a href="/activity">Activites</a></li>
 				<li>				<a href="#">e-learning</a></li>
 				<li>				<a href="#">forum</a></li>
 
