--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -57,10 +57,14 @@ var tableau:
 		<div class="container-fluid">
 			<img src="{{!-- sess.picture --}}" alt="your profil picture" class="img-responsive img-circle"><p>{{ data.lastname }} {{ sess.firstname }}, {{ sess.user }}</br></br></br></p>
 			<p>
-				{{#each data}}
+				{{!-- #each data}}
 				{{this}}<br />
-				{{/each}}
-				{{data.act_insc}}<br />{{data.act_disp}}<br />
+				{{/each --}}
+				Supposed to be ActInList ...<br />
+				{{data.actInList}}<br />
+				<br />Supposed to be ActList ...<br />
+				{{data.actList}}<br />
+				<br />
 				your password: {{ sess.pw }}
 				</br> MICK !!!! Tu va me changer ca vite fait... le mot de pass en clair c'est po bien
 				</br>si jamais tu cherche: routes/views/login.js
