--- a/templates/views/module_overview.hbs
+++ b/templates/views/module_overview.hbs
@@ -10,9 +10,11 @@
 {{/if}}
 </div>
 
-<div class="containers-fluid">
+
 {{#if sess.isAdmin}}
+<div class="containers-fluid">
 	<a class="btn btn-info" role="button" href="/admin/module/new">Add new module</a>';
+</div>
 {{/if}}
 
 <!--
