--- a/templates/views/insert_module.hbs
+++ b/templates/views/insert_module.hbs
@@ -1,40 +1,40 @@
 <div class="container">
 	<h2>Insert a new module</h2>
-	<form role="form">
+	<form role="form" method="post">
 		<div class="form-group">
 			<label for="name">Module name:</label>
-			<input type="text" class="form-control" id="name" placeholder="The module's name">
+			<input type="text" class="form-control" name="name" placeholder="The module's name">
 		</div>
 		<div class="form-group">
 			<label for="description">Description:</label>
-			<textarea class="form-control" rows="5" id="description"></textarea>
+			<textarea class="form-control" rows="5" name="description"></textarea>
 		</div>
 		<div class="form-group">
 			<label for="slots">Slots:</label>
-			<input type="number" class="form-control" id="slots">
+			<input type="number" class="form-control" name="slots">
 		</div>
 		<h3>Registrations</h3>
 		<div class="form-group">
 			<label for="registrationbegins">Beginning:</label>
-			<input type="datetime-local" class="form-control" id="registrationbegins">
+			<input type="date" class="form-control" name="registrationbegins">
 		</div>
 		<div class="form-group">
 			<label for="registrationends">Ending:</label>
-			<input type="datetime-local" class="form-control" id="registrationends">
+			<input type="date" class="form-control" name="registrationends">
 		</div>
 		<h3>Period</h3>
 		<div class="form-group">
 			<label for="periodbegins">Beginning:</label>
-			<input type="datetime-local" class="form-control" id="periodbegins">
+			<input type="date" class="form-control" name="periodbegins">
 		</div>
 		<div class="form-group">
 			<label for="periodends">Ending:</label>
-			<input type="datetime-local" class="form-control" id="periodends">
+			<input type="date" class="form-control" name="periodends">
 		</div>
 		<div class="form-group">
 			<label for="credits">Credits:</label>
-			<input type="number" class="form-control" id="credits">
+			<input type="number" class="form-control" name="credits">
 		</div>
-		<button type="submit" class="btn btn-default">Submit</button>
+		<button type="submit" class="btn btn-default" action="/admin/module/new">Submit</button>
 	</form>
 </div>
