--- a/templates/views/activity_overview.hbs
+++ b/templates/views/activity_overview.hbs
@@ -12,6 +12,6 @@
 
 {{#if sess.isAdmin}}
 <div class="containers-fluid">
-	<a class="btn btn-info" role="button" href="/admin/activity/new">Add new module</a>';
+	<a class="btn btn-info" role="button" href="/admin/activity/new">Add new activity</a>
 </div>
 {{/if}}
