--- a/templates/views/insert_activity.hbs
+++ b/templates/views/insert_activity.hbs
@@ -1,6 +1,6 @@
 `<div class="container">
 	<h2>Insert a new activity</h2>
-	<form role="form" method="post">
+	<form role="form" method="post" action="/admin/activity/new">
 		<div class="form-group">
 			<label for="name">Activity name:</label>
 			<input type="text" class="form-control" name="name" placeholder="The activity's name">
@@ -42,19 +42,25 @@
 		<div class="form-group">
 			<label for="autogroup">Auto-Groups:</label>
 			<select class="form-control" name="autogroup">
-				<option>True</option>
-				<option>False</option>
+				<option value="true">True</option>
+				<option value="true">False</option>
+			</select>
 		</div>
 		<div class="form-group">
-			<label for="name">Module:</label>
-			<input type="text" class="form-control" name="name">
+			<label for="module">Module:</label>
+			<select class="form-control" name="module">
+				{{#form_listModules modlist}}
+					{{this}}
+				{{/form_listModules}}
+			</select>
 		</div>
 		<div class="form-group">
 			<label for="type">Type:</label>
 			<select class="form-control" name="type">
-				<option>Project</option>
-				<option>TD</option>
-				<option>Exam</option>
+				<option value="project">Project</option>
+				<option value="td">TD</option>
+				<option value="exam">Exam</option>
+			</select>
 		</div>
 		<button type="submit" class="btn btn-default" action="/admin/module/new">Submit</button>
 	</form>
