--- a/templates/views/module_overview.hbs
+++ b/templates/views/module_overview.hbs
@@ -13,7 +13,7 @@
 
 {{#if sess.isAdmin}}
 <div class="containers-fluid">
-	<a class="btn btn-info" role="button" href="/admin/module/new">Add new module</a>';
+	<a class="btn btn-info" role="button" href="/admin/module/new">Add new module</a>
 </div>
 {{/if}}
 
