--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -45,7 +45,7 @@
 				<li class="active">	<a href="/module">Modules</a></li>
 				<li>				<a href="/activity">Activites</a></li>
 				<li>				<a href="#">e-learning</a></li>
-				<li>				<a href="#">forum</a></li>
+				<li>				<a href="/forum">forum</a></li>
 
 				<li>
 					<form class="navbar-form" action="/search" method="POST" role="search">
