--- a/templates/views/module_overview.hbs
+++ b/templates/views/module_overview.hbs
@@ -26,6 +26,7 @@
 		vous pouvez vous enregistrer au project du {{registration.begins}} au {{registration.ends}}</br>
 		le project durera du {{period.begins}} au {{period.ends}}</br>
 		{{slots.current}}/{{slots.max}}
+		{{displayModuleList this sess.isAdmin}}
 		</p>
 	</div>
 	{{/each}}
