--- a/templates/views/view_module.hbs
+++ b/templates/views/view_module.hbs
@@ -5,8 +5,8 @@
 <div class="col-md-8"><h3>{{result.name}}</h3></div>
 
 {{#if sess.isAdmin}}
-	<div class="col-md-1"><a href="/module/edit/{{result.name}}" role="button" class="btn btn-primary">edit</a></div>
-	<div class="col-md-1"><a href="/module/delete/{{result.name}}" role="button" class="btn btn-danger">delete</a></div>
+	<div class="col-md-1"><a href="/admin/module/edit/{{result.name}}" role="button" class="btn btn-primary">edit</a></div>
+	<div class="col-md-1"><a href="/admin//module/delete/{{result.name}}" role="button" class="btn btn-danger">delete</a></div>
 {{/if}}
 </div>
 </div>
