--- a/templates/views/view_activity.hbs
+++ b/templates/views/view_activity.hbs
@@ -5,8 +5,8 @@
 <div class="col-md-8"><h3>{{result.activity.name}}</h3></div>
 
 {{#if sess.isAdmin}}
-	<div class="col-md-1"><a href="/activity/edit/{{result.activity.name}}" role="button" class="btn btn-primary">edit</a></div>
-	<div class="col-md-1"><a href="/activity/delete/{{result.activity.name}}" role="button" class="btn btn-danger">delete</a></div>
+	<div class="col-md-1"><a href="/admin/activity/edit/{{result.activity.name}}" role="button" class="btn btn-primary">edit</a></div>
+	<div class="col-md-1"><a href="/admin/activity/delete/{{result.activity.name}}" role="button" class="btn btn-danger">delete</a></div>
 {{/if}}
 </div>
 </div>
