--- a/templates/views/login.hbs
+++ b/templates/views/login.hbs
@@ -4,7 +4,7 @@
 		<div class="form-group">
 			<label for="username" class="col-sm-2 control-label">login</label>
 			<div class="col-sm-10">
-				<input type="login" class="form-control" id="username" name='username' placeholder="login">
+				<input type="login" autofocus="autofocus" class="form-control" id="username" name='username' placeholder="login">
 			</div>
 		</div>
 		<div class="form-group">
