--- a/templates/views/module_overview.hbs
+++ b/templates/views/module_overview.hbs
@@ -23,8 +23,8 @@
 		<h4>{{this.name}}</h4>
 		<p>Description : {{this.description}}</br>
 		Ce module donne {{this.credits}} credits.</br>
-		vous pouvez vous enregistrer au project du {{registration.begins}} au {{registration.ends}}</br>
-		le project durera du {{period.begins}} au {{period.ends}}</br>
+		vous pouvez vous enregistrer au module du {{registration.begins}} au {{registration.ends}}</br>
+		le module durera du {{period.begins}} au {{period.ends}}</br>
 		{{slots.current}}/{{slots.max}}
 		{{displayModuleList this sess.isAdmin}}
 		</p>
