--- a/templates/views/module_overview.hbs
+++ b/templates/views/module_overview.hbs
@@ -10,8 +10,33 @@
 	{{#each data.modules}}
 	<div class="col-sm-3">
 		<div class="panel panel-default">
-		<div class="panel-heading" id="text-center">Panel Heading</div>
-		<div class="panel-body" id="text-center">Panel Content</div>
+		<div class="panel-heading">
+			<p class="text-center">
+				<a href="/view/module/{{this.name}}">{{this.name}}</a>
+			</p>
+		</div>
+		<div class="panel-body">
+			<p class="text-center">
+				<div class="row">
+					<h4>Registration</h4>
+					<div class="col-sm-6">
+						Begins: {{this.registration.begins}}
+					</div>
+					<div class="col-sm-6">
+						Ends: {{this.registration.ends}}
+					</div>
+				</div>
+				<div class="row">
+					<h4>Period</h4>
+					<div class="col-sm-6">
+						Begins: {{this.period.begins}}
+					</div>
+					<div class="col-sm-6">
+						Ends: {{this.period.ends}}
+					</div>
+				</div>
+			</p>
+		</div>
 		</div>
 	</div>
 	{{/each}}
