--- a/templates/views/module_overview.hbs
+++ b/templates/views/module_overview.hbs
@@ -12,7 +12,7 @@
 		<div class="panel panel-default">
 		<div class="panel-heading">
 			<p class="text-center">
-				<a href="/view/module/{{this.name}}">{{this.name}}</a>
+				<a href="/module/view/{{this.name}}">{{this.name}}</a>
 			</p>
 		</div>
 		<div class="panel-body">
