--- a/templates/views/forum_overview.hbs
+++ b/templates/views/forum_overview.hbs
@@ -3,7 +3,7 @@
 <div class="container">
 	<ul class="list-group">
 	{{#each threads}}
-		<li>{{this.title}}</li>
+		<li><a href="/forum/view/{{this._id}}">{{this.title}}</a></li>
 	{{/each}}
 	</ul>
 </div>
