--- a/templates/views/confirm_action.hbs
+++ b/templates/views/confirm_action.hbs
@@ -22,7 +22,7 @@
 {{#if isRegActivity}}
 <div class="container">
 	<h2>{{confirm_text}}</h2><br />
-	<form action="/module/register/{{name}}" method="POST">
+	<form action="/activity/register/{{name}}" method="POST">
 		<button type="submit" name='answer' class="btn btn-default" value="yes">YES</button>
 		<button type="submit" name='answer' class="btn btn-default" value="no">NO</button>
 	</form>
