--- a/templates/views/forum_thread.hbs
+++ b/templates/views/forum_thread.hbs
@@ -1,7 +1,7 @@
 <div class="container">
 	<ul class="list-group">
 	{{#each posts}}
-		<li>{{this.message}}</li>
+		<li>{{this.message}} <a href="/forum/reply/{{this._id}}" class="btn btn-info" role="button">Reply</a></li>
 	{{/each}}
 	</ul>
 </div>
